CHATS_SIT/force-app/main/default/objects/T_APPLN_OTHER_INCOME__c.object
<CustomObject>
    <description>PEAK application other income information</description>
 <!--   <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>AMT_INCOME_OTHER_GROSS__c</fullName>
        <description>AMT_INCOME_OTHER_GROSS</description>
        <label>Gross Income Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_CBMS_SOURCE_INCOME__c</fullName>
        <label>CDE_CBMS_SOURCE_INCOME</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_INCOME__c</fullName>
        <description>CDE_FREQ_INCOME</description>
        <label>Frequency Income Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_INCOME__c</fullName>
        <description>CDE_SOURCE_INCOME</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Source Income Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_INCOME__c</fullName>
        <label>CDE_SOURCE_VRFYD_INCOME</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <label>CDE_TYPE_VERIF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOURS_WORKED__c</fullName>
        <label>Total Hours Worked</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Other Income</relationshipLabel>
        <relationshipName>Application_Other_Income</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_OTHER_INCOME__c</fullName>
        <label>IDN_APPLN_OTHER_INCOME</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_COURT__c</fullName>
        <description>IDN_COURT</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>IDN_COURT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCHECK_TYPE__c</fullName>
        <label>Paycheck Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Other Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOI-{0}</displayFormat>
        <label>Application Other Income ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Other Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>